# Merlin

./: .gitignore  DEVELOPMENT.md  Merlin.bat  README.md  build_merlin.py  generate_icon.py  launcher.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  streamlit_app.py
doc/: conf.py  index.md
src/balloon_quantity_analyzer/: __init__.py  analyzer.py  app.py  balloon_detector.py  cli.py  confidence.py  config.py  detail_view_resolver.py  ingestor.py  models.py  multiplier_associator.py  multiplier_parser.py  ocr_adapter.py  report_generator.py  run_app.py  tally_aggregator.py  vector_balloon_detector.py
src/merlin_balloons/: __init__.py
test/: README.md  test_merlin_balloons.py
tests/: test_integration.py
tests/fixtures/: .gitkeep
tests/property/: test_association_props.py  test_confidence_props.py  test_config_props.py  test_detail_view_props.py  test_multiplier_parsing_props.py  test_report_props.py  test_tally_props.py
tests/unit/: test_analyzer.py  test_balloon_detector.py  test_cli.py  test_confidence.py  test_config.py  test_detail_view_resolver.py  test_ingestor.py  test_multiplier_associator.py  test_multiplier_parser.py  test_ocr_adapter.py  test_report_generator.py  test_tally_aggregator.py
