[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "balloon-quantity-analyzer"
version = "1.1.0"
description = "Codename Merlin — Detect Find number balloons and tally quantities from mechanical assembly drawings"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.8.0",
    "pytesseract>=0.3.10",
    "pdf2image>=1.16.0",
    "pdfplumber>=0.10.0",
    "pypdf>=3.0.0",
    "streamlit>=1.30.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.82.0",
    "pytest>=7.4.0",
]

[project.scripts]
balloon-analyzer = "balloon_quantity_analyzer.cli:main"
merlin = "balloon_quantity_analyzer.run_app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
